fixed video embed

--- a/index.html
+++ b/index.html
@@ -72,9 +72,11 @@
         </ul>
       </div>
       <div class="col-md-6 offset-md-3 mt-4 mb-4">
-          <hr>
+        <hr>
         <p>'everything is waiting for you' live in my living room</p>
-        <iframe class="w-100" style="height:200px;" src="https://www.youtube.com/embed/I_eVN-5G2us" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe src="https://www.youtube.com/embed/I_eVN-5G2us" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
       </div>
     </div>
   </div>
