--- a/index.html
+++ b/index.html
@@ -80,5 +80,14 @@
       </div>
     </div>
   </div>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-48617559-12"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-48617559-12');
+</script>
 </body>
 </html>
