--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
           </li>
         </ul>
       </div>
+      <div class="col-md-6 offset-md-3 mt-4" id="fbofw">
+        <hr>
+        <p>'fbofw' live in my bedroom</p>
+        <div class="embed-responsive embed-responsive-16by9">
+          <iframe src="https://www.youtube.com/embed/o0cT3_FBeqY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </div>
       <div class="col-md-6 offset-md-3 mt-4 mb-4">
         <hr>
         <p>'everything is waiting for you' live in my living room</p>
@@ -81,13 +88,13 @@
     </div>
   </div>
   <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-48617559-12"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-48617559-12"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
-  gtag('config', 'UA-48617559-12');
-</script>
+    gtag('config', 'UA-48617559-12');
+  </script>
 </body>
 </html>
