--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
           <li>
             <a href="https://open.spotify.com/album/6qDWvRh4fsnCJRlGLbJHkr" target="_blank" class="d-flex align-items-center">
               <img class="logo" src="http://pluspng.com/img-png/spotify-logo-png-open-2000.png" alt="" class="logo">
-              <div class="name">Spotify</div>
+              <div class="name">spotify</div>
             </a>
           </li>
           <li>
             <a href="https://music.apple.com/us/album/everything-is-waiting-for-you-single/1478669928?uo=4&app=itunes&at=1001lry3&ct=dashboard" target="_blank" class="d-flex align-items-center">
               <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/df/ITunes_logo.svg/438px-ITunes_logo.svg.png" alt="" class="logo">
-              <div class="name">iTunes</div>
+              <div class="name">itunes</div>
             </a>
           </li>
           <li>
             <a href="http://iainandrew.bandcamp.com/album/everything-is-waiting-for-you" target="_blank" class="d-flex align-items-center">
               <img class="logo" src="https://www.trzcacak.rs/myfile/full/92-920974_bandcamp-logo-icon-ville-de-saint-etienne.png" alt="" class="logo">
-              <div class="name">Bandcamp</div>
+              <div class="name">bandcamp</div>
             </a>
           </li>
         </ul>
