--- a/index.html
+++ b/index.html
@@ -44,6 +44,25 @@
     <div class="row">
       <div class="col-12 text-center mt-4">
         <h1>iain andrew</h1>
+        <p>'i can't get hurt if i'm alone'<br>out december 15th</p>
+      </div>
+      <div class="col-md-6 offset-md-3">
+        <img src="https://s3.amazonaws.com/gather.fandalism.com/800x800%2D1448088%2D%2D81B9F3F2%2D613F%2D4487%2D8B60AEC31622AED1%2D%2D1574983144183%2D%2Dcover%2Ejpg" alt="">
+      </div>
+      <div class="col-md-6 offset-md-3 mt-4 mb-4">
+        <ul class="music-links">
+          <li>
+            <a href="https://distrokid.com/hyperfollow/iainandrew/i-cant-get-hurt-if-im-alone" target="_blank" class="d-flex align-items-center">
+              <img class="logo" src="http://pluspng.com/img-png/spotify-logo-png-open-2000.png" alt="" class="logo">
+              <div class="name">pre-save on spotify</div>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <hr>
+    <div class="row">
+      <div class="col-12 text-center mt-4">
         <p>'everything is waiting for you'<br>out now</p>
       </div>
       <div class="col-md-6 offset-md-3">
@@ -85,6 +104,15 @@
           <iframe src="https://www.youtube.com/embed/I_eVN-5G2us" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
       </div>
+    </div>
+  </div>
+  <hr>
+  <div class="row mb-5">
+    <div class="col-md-6 offset-md-3 text-center mt-4">
+      <h1>about</h1>
+      <p>iain andrew is a musician and songwriter from dublin, ireland. with wistful and somber lyrics, iain writes sad folk for sad folk. at age 16, he discovered the music of bright eyes and elliott smith, who greatly influenced his style of intimate, confessional, lo-fi folk.</p>
+      <p>in september 2019, iain released his debut ep, ‘everything is waiting for you’, featuring 2 melancholic yet romantic songs, recorded on a 1980’s 4-track tape recorder. </p>
+      <p>iain’s latest ep, ‘i can’t get hurt if i’m alone’, comes out on december 15th. it chronicles the breakdown of a relationship over 3 songs, covering themes of jealousy, regret, and coming to terms with being alone.</p>
     </div>
   </div>
   <!-- Global site tag (gtag.js) - Google Analytics -->
