--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
       width:40px;
       margin-right:10px;
     }
+    a {
+      color:inherit;
+    }
   </style>
 </head>
 <body>
@@ -108,11 +111,14 @@
   </div>
   <hr>
   <div class="row mb-5">
-    <div class="col-md-6 offset-md-3 text-center mt-4">
+    <div class="col-md-6 offset-md-3 mt-4">
       <h1>about</h1>
       <p>iain andrew is a musician and songwriter from dublin, ireland. with wistful and somber lyrics, iain writes sad folk for sad folk. at age 16, he discovered the music of bright eyes and elliott smith, who greatly influenced his style of intimate, confessional, lo-fi folk.</p>
       <p>in september 2019, iain released his debut ep, ‘everything is waiting for you’, featuring 2 melancholic yet romantic songs, recorded on a 1980’s 4-track tape recorder. </p>
-      <p>iain’s latest ep, ‘i can’t get hurt if i’m alone’, comes out on december 15th. it chronicles the breakdown of a relationship over 3 songs, covering themes of jealousy, regret, and coming to terms with being alone.</p>
+      <p class="mb-4">iain’s latest ep, ‘i can’t get hurt if i’m alone’, comes out on december 15th. it chronicles the breakdown of a relationship over 3 songs, covering themes of jealousy, regret, and coming to terms with being alone.</p>
+
+      <h2>inquiries</h2>
+      <p>email: <a href="mailto:iainandrewmusic@gmail.com">iainandrewmusic@gmail.com</a></p>
     </div>
   </div>
   <!-- Global site tag (gtag.js) - Google Analytics -->
