--- a/index.html
+++ b/index.html
@@ -117,8 +117,9 @@
       <p>in september 2019, iain released his debut ep, ‘everything is waiting for you’, featuring 2 melancholic yet romantic songs, recorded on a 1980’s 4-track tape recorder. </p>
       <p class="mb-4">iain’s latest ep, ‘i can’t get hurt if i’m alone’, comes out on december 15th. it chronicles the breakdown of a relationship over 3 songs, covering themes of jealousy, regret, and coming to terms with being alone.</p>
 
-      <h2>inquiries</h2>
+      <h2>contact</h2>
       <p>email: <a href="mailto:iainandrewmusic@gmail.com">iainandrewmusic@gmail.com</a></p>
+      <p>instagram: <a href="https://www.instagram.com/imiainandrew">@imiainandrew</a></p>
     </div>
   </div>
   <!-- Global site tag (gtag.js) - Google Analytics -->
