added photo credit

--- a/index.html
+++ b/index.html
@@ -117,9 +117,10 @@
       <p>in september 2019, iain released his debut ep, ‘everything is waiting for you’, featuring 2 melancholic yet romantic songs, recorded on a 1980’s 4-track tape recorder. </p>
       <p>iain’s latest ep, ‘i can’t get hurt if i’m alone’, comes out on december 15th. it chronicles the breakdown of a relationship over 3 songs, covering themes of jealousy, regret, and coming to terms with being alone.</p>
 
-      <a href="/images/iain-full-res.jpg" class="d-block mb-4">
+      <a href="/images/iain-full-res.jpg" class="d-block">
         <img src="/images/iain.jpg" alt="">
       </a>
+      <p class="mb-4">photo by <a href="https://janebandicute.squarespace.com/" target="_blank"><i>janebandicute</i></a></p>
 
       <h2>contact</h2>
       <p>email: <a href="mailto:iainandrewmusic@gmail.com">iainandrewmusic@gmail.com</a></p>
