--- a/index.html
+++ b/index.html
@@ -47,17 +47,32 @@
     <div class="row">
       <div class="col-12 text-center mt-4">
         <h1>iain andrew</h1>
-        <p>'i can't get hurt if i'm alone'<br>out december 15th</p>
+        <p>'i can't get hurt if i'm alone'<br>out now</p>
       </div>
       <div class="col-md-6 offset-md-3">
         <img src="https://s3.amazonaws.com/gather.fandalism.com/800x800%2D1448088%2D%2D81B9F3F2%2D613F%2D4487%2D8B60AEC31622AED1%2D%2D1574983144183%2D%2Dcover%2Ejpg" alt="">
       </div>
-      <div class="col-md-6 offset-md-3 mt-4 mb-4">
+      <div class="col-md-6 offset-md-3 mt-4">
+        <p>‘i can’t get hurt if i’m alone’ chronicles the breakdown of a relationship over 3 songs, covering themes of jealousy, regret, and coming to terms with being alone. out now on all streaming platforms.</p>
+      </div>
+      <div class="col-md-6 offset-md-3 mt-4">
         <ul class="music-links">
           <li>
-            <a href="https://distrokid.com/hyperfollow/iainandrew/i-cant-get-hurt-if-im-alone" target="_blank" class="d-flex align-items-center">
+            <a href="https://open.spotify.com/album/72aM1VN4BwUb3q1X1s29Px" target="_blank" class="d-flex align-items-center">
               <img class="logo" src="http://pluspng.com/img-png/spotify-logo-png-open-2000.png" alt="" class="logo">
-              <div class="name">pre-save on spotify</div>
+              <div class="name">spotify</div>
+            </a>
+          </li>
+          <li>
+            <a href="https://music.apple.com/us/album/i-cant-get-hurt-if-im-alone-single/1489876580?uo=4&app=itunes&at=1001lry3&ct=dashboard" target="_blank" class="d-flex align-items-center">
+              <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/df/ITunes_logo.svg/438px-ITunes_logo.svg.png" alt="" class="logo">
+              <div class="name">itunes/apple music</div>
+            </a>
+          </li>
+          <li>
+            <a href="https://iainandrew.bandcamp.com/album/i-cant-get-hurt-if-im-alone" target="_blank" class="d-flex align-items-center">
+              <img class="logo" src="https://www.trzcacak.rs/myfile/full/92-920974_bandcamp-logo-icon-ville-de-saint-etienne.png" alt="" class="logo">
+              <div class="name">bandcamp</div>
             </a>
           </li>
         </ul>
@@ -66,7 +81,7 @@
     <hr>
     <div class="row">
       <div class="col-12 text-center mt-4">
-        <p>'everything is waiting for you'<br>out now</p>
+        <p>'everything is waiting for you'</p>
       </div>
       <div class="col-md-6 offset-md-3">
         <img src="https://s3.amazonaws.com/gather.fandalism.com/800x800-1448088--7CEACFCB-2A2C-42E8-893E3E2204B2B5C7--1567451565751--coverjustphoto.jpg" alt="">
@@ -82,7 +97,7 @@
           <li>
             <a href="https://music.apple.com/us/album/everything-is-waiting-for-you-single/1478669928?uo=4&app=itunes&at=1001lry3&ct=dashboard" target="_blank" class="d-flex align-items-center">
               <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/df/ITunes_logo.svg/438px-ITunes_logo.svg.png" alt="" class="logo">
-              <div class="name">itunes</div>
+              <div class="name">itunes/apple music</div>
             </a>
           </li>
           <li>
@@ -114,12 +129,12 @@
         <h1>about</h1>
         <p>iain andrew is a musician and songwriter from dublin, ireland. with wistful and somber lyrics, iain writes sad folk for sad folk. at age 16, he discovered the music of bright eyes and elliott smith, who greatly influenced his style of intimate, confessional, lo-fi folk.</p>
         <p>in september 2019, iain released his debut ep, ‘everything is waiting for you’, featuring 2 melancholic yet romantic songs, recorded on a 1980’s 4-track tape recorder. </p>
-        <p>iain’s latest ep, ‘i can’t get hurt if i’m alone’, comes out on december 15th. it chronicles the breakdown of a relationship over 3 songs, covering themes of jealousy, regret, and coming to terms with being alone.</p>
+        <p>iain’s latest ep, ‘i can’t get hurt if i’m alone’ chronicles the breakdown of a relationship over 3 songs, covering themes of jealousy, regret, and coming to terms with being alone. it's out now on all streaming platforms.</p>
 
         <a href="/images/iain-full-res.jpg" class="d-block">
           <img src="/images/iain.jpg" alt="">
         </a>
-        <p class="mb-4">photo by <a href="https://janebandicute.squarespace.com/" target="_blank"><i>janebandicute</i></a></p>
+        <p class="mb-4">photo by <a href="https://janebandicute.squarespace.com/" target="_blank"><u><i>janebandicute</i></u></a></p>
 
         <h2>contact</h2>
         <p>email: <a href="mailto:iainandrewmusic@gmail.com">iainandrewmusic@gmail.com</a></p>
