--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <p>'i can't get hurt if i'm alone'<br>out now</p>
       </div>
       <div class="col-md-6 offset-md-3">
-        <img src="https://s3.amazonaws.com/gather.fandalism.com/800x800%2D1448088%2D%2D81B9F3F2%2D613F%2D4487%2D8B60AEC31622AED1%2D%2D1574983144183%2D%2Dcover%2Ejpg" alt="">
+        <a href="https://open.spotify.com/album/72aM1VN4BwUb3q1X1s29Px"><img src="https://s3.amazonaws.com/gather.fandalism.com/800x800%2D1448088%2D%2D81B9F3F2%2D613F%2D4487%2D8B60AEC31622AED1%2D%2D1574983144183%2D%2Dcover%2Ejpg" alt=""></a>
       </div>
       <div class="col-md-6 offset-md-3 mt-4">
         <p>‘i can’t get hurt if i’m alone’ chronicles the breakdown of a relationship over 3 songs, covering themes of jealousy, regret, and coming to terms with being alone. out now on all streaming platforms.</p>
