--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
       width:40px;
       margin-right:10px;
     }
-    a {
+    /* a {
       color:inherit;
-    }
+    } */
   </style>
 </head>
 <body>
@@ -53,8 +53,12 @@
         <a href="https://open.spotify.com/album/72aM1VN4BwUb3q1X1s29Px"><img src="https://s3.amazonaws.com/gather.fandalism.com/800x800%2D1448088%2D%2D81B9F3F2%2D613F%2D4487%2D8B60AEC31622AED1%2D%2D1574983144183%2D%2Dcover%2Ejpg" alt=""></a>
       </div>
       <div class="col-md-6 offset-md-3 mt-4">
-        <p>‘i can’t get hurt if i’m alone’ chronicles the breakdown of a relationship over 3 songs, covering themes of jealousy, regret, and coming to terms with being alone. out now on all streaming platforms.</p>
+        <p><i>"His new EP I Can’t Get Hurt If I’m Alone, the follow-up to Septembers authentically lo-fi Everything Is Waiting For You, documents the breakdown of a relationship like the loose leaves of a furiously scrawled-in diary, over delicately beautiful finger-picked compositions which feel like aural spider webs hung decorating a frosty morning."</i></p>
+        <p>Read the full review at <a href="https://louderthanwar.com/iain-andrews-i-cant-get-hurt-if-im-alone-ep-review-and-artist-interview/" target="_blank">Louder Than War</a>.</p>
       </div>
+      <!-- <div class="col-md-6 offset-md-3 mt-4">
+        <p>‘i can’t get hurt if i’m alone’ chronicles the breakdown of a relationship over 3 songs, covering themes of jealousy, regret, and coming to terms with being alone. out now on all streaming platforms.</p>
+      </div> -->
       <div class="col-md-6 offset-md-3 mt-4">
         <ul class="music-links">
           <li>
