--- a/index.html
+++ b/index.html
@@ -139,6 +139,14 @@
           <img src="/images/iain.jpg" alt="">
         </a>
         <p class="mb-4">photo by <a href="https://janebandicute.squarespace.com/" target="_blank"><u><i>janebandicute</i></u></a></p>
+        <a href="/images/iain-full-res.jpg" class="d-block">
+          <img src="/images/iain.jpg" alt="">
+        </a>
+        <p class="mb-4">photo by <a href="https://janebandicute.squarespace.com/" target="_blank"><u><i>janebandicute</i></u></a></p>
+        <a href="/images/iain-full-res.jpg" class="d-block">
+          <img src="/images/iain.jpg" alt="">
+        </a>
+        <p class="mb-4">photo by <a href="https://janebandicute.squarespace.com/" target="_blank"><u><i>janebandicute</i></u></a></p>
 
         <h2>contact</h2>
         <p>email: <a href="mailto:iainandrewmusic@gmail.com">iainandrewmusic@gmail.com</a></p>
